# deep-search-app

./: .gitignore  .mailmap  AGENTS.md  README.md  e2e-BRIDGE-PLAN.md  e2e-RESEARCH.md  eslint.config.js  index.html  opencode.json  package-lock.json  package.json  research-tauri-webview-focus.md  tsconfig.json  vite.config.ts  vitest.config.ts
.agents/: bug-hunts.md  invariants.md  perf-hunts.md  research.md  sidecar.md  testing.md  ui.md
.playwright-mcp/: amazon-snapshot.yml  page-2026-06-04T15-48-19-817Z.yml
.storybook/: main.ts  preview.tsx  tauri-mocks.ts  use-app-update-mock.ts  vitest.setup.ts
docs/: how-memories-work.md  how-previous-research-search-works.md  research-search.md  research_agent.md  search_and_extract.md  shortcuts.md
e2e/: fixtures.ts  playwright.config.ts
e2e-tests/: package-lock.json  package.json  wdio.conf.js
e2e/tests/: app.spec.ts  (+3 more)
scripts/: benchmark-sub-agent-streaming.mjs  build-sidecar-compiled.mjs  generate-research-search-corpus.mjs  prepare-node-sidecar.mjs  run-loop.sh  set-release-version.mjs  storybook-screenshots.mjs  test-prompt.mjs  visual-snapshot-test.mjs  z-ai-quota.mjs
specs/: check-zod.md  memory-extraction-ask-questions.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icons.sh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/research_search/: chunking.rs  embeddings.rs  http_client.rs  hype.rs  indexing.rs  mod.rs  reranker.rs  schema.rs  search.rs
(+302 files in other folders)
