[package]
name = "deep-search-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deep_search_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "research-search-benchmark"
path = "src/bin/research-search-benchmark.rs"

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.3"
tauri-plugin-webdriver = "0.2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["time"] }
url = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
pulldown-cmark = { version = "0.13", default-features = false }
ipnet = "2.10"
dotenvy = "0.15"
